# GDExplorer

./: .cursorignore  .gitignore  .prettierignore  CLAUDE.md  GEMINI.md  LICENSE.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: codebase-mental-model-documenter.md  react-architect.md  tauri-rust-expert.md  ui-design-expert.md  user-guide-expert.md
.claude/commands/: check.md  init.md
.cursor/rules/: main.mdc
.github/workflows/: release.yml
docs/: CONTRIBUTING.md  GETTING_STARTED.md  README.md  SECURITY.md  SECURITY_PRODUCTION.md  UPDATER_GITHUB_RELEASES.md  tasks.md  template-requirements.md
docs/developer/: architectural-patterns.md  architecture-guide.md  auto-updates.md  bundle-optimization.md  command-system.md  data-persistence.md  keyboard-shortcuts.md  logging.md  menus.md  notifications.md  performance-patterns.md  releases.md  state-management.md  testing.md
docs/userguide/: userguide.md
scripts/: prepare-release.js  sa_upload_test.py  test-update-local.sh
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  rclone_tools.rs
src-tauri/src/upload/: drive_client.rs  drive_ops.rs  events.rs  mirror.rs  mod.rs  rclone.rs  sa_loader.rs  scheduler.rs
src/components/: ErrorBoundary.tsx  ThemeProvider.tsx
src/hooks/: use-command-context.ts  useMainWindowEventListeners.ts
src/lib/: drive-url.ts  logger.ts  notifications.ts  (+2 more)
(+53 files in other folders)
